# adobe-swatch-exchange-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yaml  release.yaml
examples/: aurora.ase  read.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_block.rs  parse_group.rs  read_ase.rs
src/: buffer.rs  error.rs  lib.rs
src/types/: block_type.rs  color_block.rs  color_type.rs  color_value.rs  group.rs  mod.rs
