[package]
name = "adobe-swatch-exchange"
version = "2.0.3"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/FineFindus/adobe-swatch-exchange-rs"
repository = "https://github.com/FineFindus/adobe-swatch-exchange-rs"
keywords = ["ase", "adobe", "palette", "swatch"]
categories = ["parser-implementations"]
description = "Read and write .ase files"
